# verplant

./: CLAUDE.md  Cargo.toml  run.sh
client/: Cargo.toml  index.html
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: README.md  lib.rs
