[package]
name = "verplant_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
verplant = { path = "../shared" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "HtmlInputElement", "HtmlSelectElement", "CanvasRenderingContext2d", "WebSocket", "MessageEvent"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
