[package]
name = "verplant_server"
version = "0.1.0"
edition = "2024"

[dependencies]
verplant = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
